testing/tests/melt/negative/lvalues_1.c
int main() 
{
    2 = 3; // Numeric literals are not lvalues
    return 0;
}